# indexedset

./: .gitignore  Benchmark.hs  IndexedSet.hs  IndexedSet.hs~  IndexedSetTest.hs  IndexedSetTest.hs~  Main.hs  README  README.md  TODO  indexedset.cabal
src/: IndexedSet.hs
